script running GUI now