@@ -12,5 +12,12 @@ mvn clean package
 cd ../FServerStorage
 mvn clean package
 
+cd ../CommandApp
+mvn clean package
+cp target/CommandApp-1.jar ../
+
 cd ..
 docker-compose up -d
+
+java --module-path /Users/tjfernandes/Documents/Java/javafx-sdk-17.0.9/lib --add-modules javafx.controls,javafx.fxml -jar CommandApp-1.jar
+
